syntax = "proto3";

package com.sitewhere.grpc.service;

option java_multiple_files = true;
option java_package = "com.sitewhere.grpc.service";
option java_outer_classname = "TenantServices";

import "tenant-model.proto";

service TenantManagement {

	// Create a new tenant.
	rpc CreateTenant (GCreateTenantRequest) returns (GCreateTenantResponse) {}
}
	
// Request for creating a tenant.
message GCreateTenantRequest {
	com.sitewhere.grpc.model.GTenantCreateRequest request = 1;
}

// Response from creating a tenant.
message GCreateTenantResponse {
	com.sitewhere.grpc.model.GTenant tenant = 1;
}
